--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>To Do App</title>
 </head>
 <body>
-    
+    <div class="buttons">
+        <button id="but-reset" onclick="noteReset()"><img src="" alt="reset"></button>
+        <button id="but-add-note" onclick="addNote()"><img src="" alt="add"></button>
+        <button id="but-color-change" onclick="colorChange()"><img src="" alt="color"></button>
+    </div>
 </body>
 </html>
