--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="buttons">
         <button id="but-reset" onclick="noteReset()"><img src="" alt="reset"></button>
         <button id="but-add-note" onclick="addNote()"><img src="" alt="add"></button>
-        <button id="but-color-change" onclick="colorChange()"><img src="" alt="color"></button>
+        <button id="but-color-change" onclick="colorChange()"><img src="./assets/horiz-dots.svg" alt="color"></button>
     </div>
 </body>
 </html>
