--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do App</title> <!--nazov projektu-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="buttons">
-        <button id="but-reset" onclick="noteReset()"><img src="" alt="reset"></button>
-        <button id="but-add-note" onclick="addNote()"><img src="" alt="add"></button>
+        <button id="but-reset" onclick="noteReset()"><img src="./assets/reset.svg" alt="reset"></button>
+        <button id="but-add-note" onclick="addNote()"><img src="./assets/add-note.svg" alt="add"></button>
         <button id="but-color-change" onclick="colorChange()"><img src="./assets/horiz-dots.svg" alt="color"></button>
     </div>
 </body>
