--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        <div id="blue-top"></div>
+        <div id="note">nie, to nie je</div>
+    </div>
     <div class="buttons">
         <button id="but-reset" onclick="noteReset()"><img src="./assets/reset.svg" alt="reset" class="svg"></button>
         <button id="but-add-note" onclick="addNote()"><img src="./assets/add-note.svg" alt="add"></button>
