pridanie xka na note

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div>
-        <div id="blue-top"></div>
+        <div id="blue-top"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></div>
         <div id="note">nie, to nie je</div>
     </div>
     <div class="buttons">
-        <button id="but-reset" onclick="noteReset()"><img src="./assets/reset.svg" alt="reset" class="svg"></button>
+        <button id="but-reset" onclick="noteReset()"><img src="./assets/reset.svg" alt="reset"></button>
         <button id="but-add-note" onclick="addNote()"><img src="./assets/add-note.svg" alt="add"></button>
         <button id="but-color-change" onclick="colorChange()"><img src="./assets/horiz-dots.svg" alt="color"></button>
     </div>
