spravenie z delete tlacidlo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <div id="blue-top"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></div>
+        <div id="blue-top"><button id="svg-delete-button"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></button></div>
         <div id="note">nie, to nie je</div>
     </div>
     <div class="buttons">
