--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div>
+    <div id="first-note">
         <div id="blue-top"><button id="svg-delete-button"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></button></div>
-        <div id="note">nie, to nie je</div>
+        <div id="note"></div>
     </div>
     <div class="buttons">
         <button id="but-reset" onclick="noteReset()"><img src="./assets/reset.svg" alt="reset"></button>
