okej, finally sa mi podarilo onclick creatnut divko, musim to len inak arrangnut lebo to creatuje stale pod buttonmi

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div id="first-note">
-        <div id="blue-top"><button id="svg-delete-button"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></button></div>
-        <div id="note"></div>
-    </div>
-    <div class="buttons">
-        <button id="but-reset" onclick="noteReset()"><img src="./assets/reset.svg" alt="reset"></button>
-        <button id="but-add-note" onclick="addNote()"><img src="./assets/add-note.svg" alt="add"></button>
-        <button id="but-color-change" onclick="colorChange()"><img src="./assets/horiz-dots.svg" alt="color"></button>
+    <div id="app">
+        <div id="first-note">
+            <div id="blue-top"><button id="svg-delete-button"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></button></div>
+            <div id="note"></div>
+        </div>
+        <div class="buttons">
+            <button id="but-reset" onclick="noteReset()"><img src="./assets/reset.svg" alt="reset"></button>
+            <button id="but-add-note"><img src="./assets/add-note.svg" alt="add"></button>
+            <button id="but-color-change" onclick="colorChange()"><img src="./assets/horiz-dots.svg" alt="color"></button>
+        </div>
     </div>
 </body>
 </html>
