--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
 </head>
 <body>
     <div id="app">
-        <div id="first-note">
-            <div id="blue-top"><button id="svg-delete-button"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></button></div>
-            <div id="note"></div>
+
+        <div id="notes">
+            <div id="first-note" class="first-note-cl">
+                <div id="blue-top" class="blue-top-cl"><button id="svg-delete-button"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></button></div>
+                <div id="note" class="note-cl"></div>
+            </div>
         </div>
+
         <div class="buttons">
-            <button id="but-reset" onclick="noteReset()"><img src="./assets/reset.svg" alt="reset"></button>
+            <button id="but-reset"><img src="./assets/reset.svg" alt="reset"></button>
             <button id="but-add-note"><img src="./assets/add-note.svg" alt="add"></button>
-            <button id="but-color-change" onclick="colorChange()"><img src="./assets/horiz-dots.svg" alt="color"></button>
+            <button id="but-color-change"><img src="./assets/horiz-dots.svg" alt="color"></button>
         </div>
+
     </div>
 </body>
 </html>
