spraveny funkcny x button na noty

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div id="notes">
             <div id="first-note" class="first-note-cl">
-                <div id="blue-top" class="blue-top-cl"><button id="svg-delete-button"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></button></div>
+                <div id="blue-top" class="blue-top-cl"><button id="svg-delete-button" class="svg-delete-button-cl"><img src="./assets/add-note.svg" alt="add" class="svg-delete"></button></div>
                 <div id="note" class="note-cl"></div>
             </div>
         </div>
