--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>To Do App</title> <!--nazov projektu-->
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="dist/tw.css">
 </head>
 <body>
     <div id="app">
